--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <p>Join PIXELIT, a community-driven platform for young developers to explore, create, and thrive in game development.</p>
         <a href="#features" class="btn">Get Started</a>
         <a href="#about" class="btn">Learn More</a>
-        <img src="https://via.placeholder.com/800x400" alt="Gaming development image">
+        <a href="https://unsplash.com/@carltraw" target="_blank"> <!-- Clickable image link -->
+            <img src="inn.jpg" alt=" profile image" style="width: 100%; height: auto;">
+        </a>
     </section>
 
     <!-- Feature Section -->
