--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         <h2>Celebrating Young Talent in Game Development</h2>
         <p>Showcase your skills, get recognized, and unlock opportunities.</p>
         <a href="portfolio.html" class="btn">View Success Stories</a>
-        <img src="https://via.placeholder.com/400x200" alt="Game development example">
+        <a href="https://unsplash.com/@isword" target="_blank"> <!-- Clickable image link -->
+            <img src="inn2.jpg" alt=" feature image" style="width: 100%; height: auto;">
+        </a>
     </section>
 
     <!-- Features List Section -->
