--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <!-- Hero Header Section -->
     <section class="hero">
         <h1>Empowering Young Developers to Create Amazing Games</h1>
-        <p>Join PIXELIT, a community-driven platform for young developers to explore, create, and thrive in game development.</p>
+        <p>At PIXELIT, we believe in the power of creativity and collaboration. Our mission is to provide a vibrant, community-driven platform where young developers can explore, create, and thrive in the world of game development. Whether you're just starting out or looking to enhance your skills, PIXELIT is here to support you every step of the way.</p>
         <a href="#features" class="btn">Get Started</a>
         <a href="#about" class="btn">Learn More</a>
         <a href="https://unsplash.com/@carltraw" target="_blank"> <!-- Clickable image link -->
-            <img src="inn.jpg" alt=" profile image" style="width: 100%; height: auto;">
+            <img src="inn.jpg" alt="Profile image" style="width: 100%; height: auto;">
         </a>
     </section>
 
@@ -37,7 +37,7 @@
         <p>Showcase your skills, get recognized, and unlock opportunities.</p>
         <a href="portfolio.html" class="btn">View Success Stories</a>
         <a href="https://unsplash.com/@isword" target="_blank"> <!-- Clickable image link -->
-            <img src="inn2.jpg" alt=" feature image" style="width: 100%; height: auto;">
+            <img src="inn2.jpg" alt="Feature image" style="width: 100%; height: auto;">
         </a>
     </section>
 
@@ -84,7 +84,7 @@
     <section class="newsletter">
         <h2>Stay Updated with PIXELIT</h2>
         <form>
-            <input type="email" placeholder="Your email">
+            <input type="email" placeholder="Your email" required>
             <button type="submit">Subscribe</button>
         </form>
     </section>
