--- a/index.html
+++ b/index.html
@@ -42,14 +42,41 @@
     </section>
 
     <!-- Features List Section -->
-    <section class="feature-list">
-        <h2>Discover the Exciting Features of PIXELIT</h2>
-        <ul>
-            <li>Support for Young Developers</li>
-            <li>Access to a Wide Range of Games and Apps</li>
-            <li>Community Building</li>
-        </ul>
-    </section>
+<section id="features-list" class="features-list">
+    <h2>Discover the Exciting Features of PIXELIT</h2>
+    <p>At PIXELIT, we are dedicated to fostering a vibrant community for young developers. Here’s what you can expect:</p>
+    <div class="feature-details">
+        <div class="feature-item">
+            <h3>Support for Young Developers</h3>
+            <p>PIXELIT provides mentorship programs, resources, and guidance tailored to help young developers kickstart their careers. Our community of experienced developers and industry professionals is committed to sharing knowledge and providing support every step of the way.</p>
+            <ul>
+                <li>Personalized mentorship opportunities.</li>
+                <li>Workshops and webinars on game development.</li>
+                <li>Access to exclusive resources and learning materials.</li>
+            </ul>
+        </div>
+        <div class="feature-item">
+            <h3>Access to a Wide Range of Games and Apps</h3>
+            <p>Explore a diverse library of games and applications developed by your peers. PIXELIT not only showcases innovative projects but also encourages collaboration and sharing of ideas among developers. Experience games that push the boundaries of creativity and functionality.</p>
+            <ul>
+                <li>Curated list of top-rated games and apps.</li>
+                <li>Opportunity to showcase your own projects.</li>
+                <li>Feedback and reviews from the community.</li>
+            </ul>
+        </div>
+        <div class="feature-item">
+            <h3>Community Building</h3>
+            <p>Join a passionate community where developers connect, collaborate, and grow together. PIXELIT hosts forums, events, and competitions that encourage networking and teamwork. Build lasting relationships and find partners for your next project.</p>
+            <ul>
+                <li>Networking events and meetups.</li>
+                <li>Collaborative projects and hackathons.</li>
+                <li>Forums to discuss ideas, challenges, and solutions.</li>
+            </ul>
+        </div>
+    </div>
+    <a href="portfolio.html" class="btn">View Success Stories</a>
+</section>
+
 
     <!-- Benefits Section -->
     <section class="benefits">
