--- a/index.html
+++ b/index.html
@@ -23,60 +23,40 @@
     <!-- Hero Header Section -->
     <section class="hero">
         <h1>Empowering Young Developers to Create Amazing Games</h1>
-        <p>At PIXELIT, we believe in the power of creativity and collaboration. Our mission is to provide a vibrant, community-driven platform where young developers can explore, create, and thrive in the world of game development. Whether you're just starting out or looking to enhance your skills, PIXELIT is here to support you every step of the way.</p>
+        <p>At PIXELIT, we believe in the power of creativity and collaboration. Our mission is to provide a vibrant, community-driven platform where young developers can explore, create, and thrive in the world of game development.</p>
         <a href="#features" class="btn">Get Started</a>
         <a href="#about" class="btn">Learn More</a>
-        <a href="https://unsplash.com/@carltraw" target="_blank"> <!-- Clickable image link -->
-            <img src="inn.jpg" alt="Profile image" style="width: 100%; height: auto;">
-        </a>
     </section>
 
     <!-- Feature Section -->
     <section id="features" class="features">
         <h2>Celebrating Young Talent in Game Development</h2>
         <p>Showcase your skills, get recognized, and unlock opportunities.</p>
-        <a href="portfolio.html" class="btn">View Success Stories</a>
-        <a href="https://unsplash.com/@isword" target="_blank"> <!-- Clickable image link -->
-            <img src="inn2.jpg" alt="Feature image" style="width: 100%; height: auto;">
-        </a>
+        <div class="image-container">
+            <a href="portfolio.html" class="btn">View Success Stories</a>
+            <img src="inn2.jpg" alt="Feature image" class="feature-image">
+        </div>
     </section>
 
     <!-- Features List Section -->
-<section id="features-list" class="features-list">
-    <h2>Discover the Exciting Features of PIXELIT</h2>
-    <p>At PIXELIT, we are dedicated to fostering a vibrant community for young developers. Here’s what you can expect:</p>
-    <div class="feature-details">
-        <div class="feature-item">
-            <h3>Support for Young Developers</h3>
-            <p>PIXELIT provides mentorship programs, resources, and guidance tailored to help young developers kickstart their careers. Our community of experienced developers and industry professionals is committed to sharing knowledge and providing support every step of the way.</p>
-            <ul>
-                <li>Personalized mentorship opportunities.</li>
-                <li>Workshops and webinars on game development.</li>
-                <li>Access to exclusive resources and learning materials.</li>
-            </ul>
+    <section id="features-list" class="features-list">
+        <h2>Discover the Exciting Features of PIXELIT</h2>
+        <p>At PIXELIT, we are dedicated to fostering a vibrant community for young developers. Here’s what you can expect:</p>
+        <div class="feature-details">
+            <div class="feature-item">
+                <h3>Support for Young Developers</h3>
+                <p>PIXELIT provides mentorship programs, resources, and guidance tailored to help young developers kickstart their careers.</p>
+            </div>
+            <div class="feature-item">
+                <h3>Access to a Wide Range of Games and Apps</h3>
+                <p>Explore a diverse library of games and applications developed by your peers.</p>
+            </div>
+            <div class="feature-item">
+                <h3>Community Building</h3>
+                <p>Join a passionate community where developers connect, collaborate, and grow together.</p>
+            </div>
         </div>
-        <div class="feature-item">
-            <h3>Access to a Wide Range of Games and Apps</h3>
-            <p>Explore a diverse library of games and applications developed by your peers. PIXELIT not only showcases innovative projects but also encourages collaboration and sharing of ideas among developers. Experience games that push the boundaries of creativity and functionality.</p>
-            <ul>
-                <li>Curated list of top-rated games and apps.</li>
-                <li>Opportunity to showcase your own projects.</li>
-                <li>Feedback and reviews from the community.</li>
-            </ul>
-        </div>
-        <div class="feature-item">
-            <h3>Community Building</h3>
-            <p>Join a passionate community where developers connect, collaborate, and grow together. PIXELIT hosts forums, events, and competitions that encourage networking and teamwork. Build lasting relationships and find partners for your next project.</p>
-            <ul>
-                <li>Networking events and meetups.</li>
-                <li>Collaborative projects and hackathons.</li>
-                <li>Forums to discuss ideas, challenges, and solutions.</li>
-            </ul>
-        </div>
-    </div>
-    <a href="portfolio.html" class="btn">View Success Stories</a>
-</section>
-
+    </section>
 
     <!-- Benefits Section -->
     <section class="benefits">
@@ -90,44 +70,10 @@
         <a href="#cta" class="btn">Join Us Now</a>
     </section>
 
-    <!-- Testimonial Section -->
-    <section class="testimonials">
-        <h2>Developer Testimonials</h2>
-        <div class="testimonial">
-            <p>“Joining PIXELIT opened doors I never imagined. The mentorship is invaluable.” – John Doe</p>
-        </div>
-        <div class="testimonial">
-            <p>“PIXELIT challenged me to grow, and I succeeded! The platform is superb.” – Alice Smith</p>
-        </div>
-    </section>
-
     <!-- CTA Section -->
     <section id="cta" class="cta">
         <h2>Join the PIXELIT Community Today</h2>
         <a href="signup.html" class="btn">Sign Up</a>
-    </section>
-
-    <!-- Newsletter Section -->
-    <section class="newsletter">
-        <h2>Stay Updated with PIXELIT</h2>
-        <form>
-            <input type="email" placeholder="Your email" required>
-            <button type="submit">Subscribe</button>
-        </form>
-    </section>
-
-    <!-- Team Section -->
-    <section class="team">
-        <h2>Meet the PIXELIT Team</h2>
-        <div class="team-member">
-            <p>John Doe - Developer Advocate</p>
-            <img src="https://via.placeholder.com/100" alt="Team member photo">
-        </div>
-        <div class="team-member">
-            <p>Jane Smith - Community Manager</p>
-            <img src="https://via.placeholder.com/100" alt="Team member photo">
-        </div>
-        <a href="careers.html" class="btn">We're Hiring!</a>
     </section>
 
     <!-- Footer -->
@@ -141,3 +87,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
