--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@
         </nav>
     </header>
 
-    <!-- Hero Header Section -->
+    <!-- Hero Section -->
     <section class="hero">
-        <h1>Empowering Young Developers to Create Amazing Games</h1>
-        <p>At PIXELIT, we believe in the power of creativity and collaboration. Our mission is to provide a vibrant, community-driven platform where young developers can explore, create, and thrive in the world of game development.</p>
-        <a href="#features" class="btn">Get Started</a>
-        <a href="#about" class="btn">Learn More</a>
+        <img src="inn.jpg" alt="Hero Image" class="hero-image">
+        <div class="hero-content">
+            <h1>Empowering Young Developers to Create Amazing Games</h1>
+            <p>At PIXELIT, we believe in the power of creativity and collaboration. Our mission is to provide a vibrant, community-driven platform where young developers can explore, create, and thrive in the world of game development.</p>
+            <a href="#features" class="btn">Get Started</a>
+            <a href="#about" class="btn">Learn More</a>
+        </div>
     </section>
 
-    <!-- Feature Section -->
+    <!-- Features Section -->
     <section id="features" class="features">
         <h2>Celebrating Young Talent in Game Development</h2>
         <p>Showcase your skills, get recognized, and unlock opportunities.</p>
-        <div class="image-container">
-            <a href="portfolio.html" class="btn">View Success Stories</a>
-            <img src="inn2.jpg" alt="Feature image" class="feature-image">
-        </div>
+        <img src="inn2.jpg" alt="Feature Image" class="feature-image">
+        <a href="portfolio.html" class="btn">View Success Stories</a>
     </section>
 
     <!-- Features List Section -->
@@ -44,14 +45,17 @@
         <p>At PIXELIT, we are dedicated to fostering a vibrant community for young developers. Here’s what you can expect:</p>
         <div class="feature-details">
             <div class="feature-item">
+                <img src="feature1.jpg" alt="Support for Young Developers" class="feature-item-image">
                 <h3>Support for Young Developers</h3>
                 <p>PIXELIT provides mentorship programs, resources, and guidance tailored to help young developers kickstart their careers.</p>
             </div>
             <div class="feature-item">
+                <img src="feature2.jpg" alt="Wide Range of Games and Apps" class="feature-item-image">
                 <h3>Access to a Wide Range of Games and Apps</h3>
                 <p>Explore a diverse library of games and applications developed by your peers.</p>
             </div>
             <div class="feature-item">
+                <img src="feature3.jpg" alt="Community Building" class="feature-item-image">
                 <h3>Community Building</h3>
                 <p>Join a passionate community where developers connect, collaborate, and grow together.</p>
             </div>
@@ -87,4 +91,5 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
