--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
     <section class="testimonials">
         <h2>Developer Testimonials</h2>
         <div class="testimonial">
-            <p>“Joining PIXELIT opened doors I never imagined. The mentorship is invaluable.” – John Doe</p>
+            <p>“Joining PIXELIT opened doors I never imagined. The mentorship is invaluable.” – Roshan A P</p>
         </div>
         <div class="testimonial">
-            <p>“PIXELIT challenged me to grow, and I succeeded! The platform is superb.” – Alice Smith</p>
+            <p>“PIXELIT challenged me to grow, and I succeeded! The platform is superb.” – Varshini</p>
         </div>
     </section>
 
@@ -117,19 +117,7 @@
         </form>
     </section>
 
-    <!-- Team Section -->
-    <section class="team">
-        <h2>Meet the PIXELIT Team</h2>
-        <div class="team-member">
-            <p>John Doe - Developer Advocate</p>
-            <img src="https://via.placeholder.com/100" alt="Team member photo">
-        </div>
-        <div class="team-member">
-            <p>Jane Smith - Community Manager</p>
-            <img src="https://via.placeholder.com/100" alt="Team member photo">
-        </div>
-        <a href="careers.html" class="btn">We're Hiring!</a>
-    </section>
+    
 
     <!-- Footer -->
     <footer>
