--- a/index.html
+++ b/index.html
@@ -79,16 +79,28 @@
 </section>
 
 
-    <!-- Benefits Section -->
-    <section class="benefits">
-        <h2>Unlock Your Potential</h2>
-        <p>Join PIXELIT and Transform Your Game Development Journey.</p>
-        <ul>
-            <li>Mentorship Opportunities</li>
-            <li>Skill Exposure</li>
-            <li>Resource Access</li>
-        </ul>
-        <a href="#cta" class="btn">Join Us Now</a>
+    <section class="join-pixelit">
+        <div class="container">
+            <h1>Unlock Your Potential with PIXELIT</h1>
+            <p>Welcome to PIXELIT – the platform dedicated to empowering young, passionate game developers. Whether you’re a student or an emerging developer, PIXELIT offers an ideal space to transform your game development journey through mentorship, skill-building, and exclusive resources. Join us to enhance your skills, showcase your creativity, and make your mark in the gaming industry.</p>
+
+            <div class="benefits">
+                <div class="benefit-item">
+                    <h2>1. Mentorship Opportunities</h2>
+                    <p>Get inspired and guided by experienced game developers and industry professionals. Our mentorship programs are designed to help you overcome challenges, refine your skills, and accelerate your career in game development.</p>
+                </div>
+                <div class="benefit-item">
+                    <h2>2. Skill Exposure</h2>
+                    <p>Stay ahead of the curve with hands-on exposure to essential game development skills. From game design to 2D/3D animation, PIXELIT provides access to tutorials and workshops to build a solid portfolio.</p>
+                </div>
+                <div class="benefit-item">
+                    <h2>3. Resource Access</h2>
+                    <p>Gain access to a wealth of resources that make developing and publishing games easier. PIXELIT provides all the tools, templates, and assets needed for each stage of your game development process.</p>
+                </div>
+            </div>
+
+            <button class="join-btn">Join PIXELIT Today</button>
+        </div>
     </section>
 
     <!-- Testimonial Section -->
