--- a/index.html
+++ b/index.html
@@ -39,14 +39,58 @@
 
     <!-- Feature Section -->
     <section id="features" class="features">
-        <h2>Celebrating Young Talent in Game Development</h2>
-        <p>Showcase your skills, get recognized, and unlock opportunities.</p>        
-        <a href="https://unsplash.com/@isword" target="_blank"> <!-- Clickable image link -->
-            <img src="inn2.jpg" alt="Feature image" style="width: 60%; height: auto;">
-        </a>
-        <br>
-        <a href="portfolio.html" class="btn">View Success Stories</a>
-    </section>
+    <h2>Celebrating Young Talent in Game Development</h2>
+    <p>Showcase your skills, get recognized, and unlock opportunities.</p>
+    
+    <div class="game-section">
+        <h3>Launched Games</h3>
+        <ul class="game-icons">
+            <li>
+                <a href="link_to_game_1.html" target="_blank">
+                    <img src="game_icon_1.jpg" alt="Game Icon 1" class="game-icon">
+                </a>
+            </li>
+            <li>
+                <a href="link_to_game_2.html" target="_blank">
+                    <img src="game_icon_2.jpg" alt="Game Icon 2" class="game-icon">
+                </a>
+            </li>
+            <li>
+                <a href="link_to_game_3.html" target="_blank">
+                    <img src="game_icon_3.jpg" alt="Game Icon 3" class="game-icon">
+                </a>
+            </li>
+            <!-- Add more game icons as needed -->
+        </ul>
+    </div>
+
+    <hr> <!-- A horizontal line to separate sections -->
+
+    <div class="game-section">
+        <h3>Upcoming Games</h3>
+        <ul class="game-icons">
+            <li>
+                <a href="link_to_upcoming_game_1.html" target="_blank">
+                    <img src="upcoming_game_icon_1.jpg" alt="Upcoming Game Icon 1" class="game-icon">
+                </a>
+            </li>
+            <li>
+                <a href="link_to_upcoming_game_2.html" target="_blank">
+                    <img src="upcoming_game_icon_2.jpg" alt="Upcoming Game Icon 2" class="game-icon">
+                </a>
+            </li>
+            <li>
+                <a href="link_to_upcoming_game_3.html" target="_blank">
+                    <img src="upcoming_game_icon_3.jpg" alt="Upcoming Game Icon 3" class="game-icon">
+                </a>
+            </li>
+            <!-- Add more upcoming game icons as needed -->
+        </ul>
+    </div>
+
+    <br>
+    <a href="portfolio.html" class="btn">View Success Stories</a>
+</section>
 
     <!-- Features List Section -->
 <section id="features-list" class="features-list">
