--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <h3>Upcoming Games</h3>
         <ul class="game-icons">
             <li>
-                <a href="link_to_upcoming_game_1.html" target="_blank">
-                    <img src="upcoming_game_icon_1.jpg" alt="Upcoming Game Icon 1" class="game-icon">
+                <a href="https://pixelit.tech/escapeinspace.html" target="_blank">
+                    <img src="upcoming_game_icon_1.png" alt="Upcoming Game Icon 1" class="game-icon">
                 </a>
             </li>
             <li>
