--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p>Showcase your skills, get recognized, and unlock opportunities.</p>
     
     <div class="game-section">
-        <h3>Launched Games</h3>
+<!--         <h3>Launched Games</h3>
         <ul class="game-icons">
             <li>
                 <a href="link_to_game_1.html" target="_blank">
@@ -61,7 +61,7 @@
                 </a>
             </li>
             <!-- Add more game icons as needed -->
-        </ul>
+<!--         </ul> --> 
     </div>
 
     <hr> <!-- A horizontal line to separate sections -->
@@ -74,7 +74,7 @@
                     <img src="upcoming_game_icon_1.png" alt="Upcoming Game Icon 1" class="game-icon">
                 </a>
             </li>
-            <li>
+<!--             <li>
                 <a href="link_to_upcoming_game_2.html" target="_blank">
                     <img src="upcoming_game_icon_2.jpg" alt="Upcoming Game Icon 2" class="game-icon">
                 </a>
@@ -83,7 +83,7 @@
                 <a href="link_to_upcoming_game_3.html" target="_blank">
                     <img src="upcoming_game_icon_3.jpg" alt="Upcoming Game Icon 3" class="game-icon">
                 </a>
-            </li>
+            </li> -->
             <!-- Add more upcoming game icons as needed -->
         </ul>
     </div>
