--- a/escapeinspace.html
+++ b/escapeinspace.html
@@ -4,27 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escape in Space - Endless Runner Game</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #1a1a1a;
-            color: #ffffff;
+        /* Basic Reset */
+        * {
             margin: 0;
-            padding: 20px;
+            padding: 0;
+            box-sizing: border-box;
+        } 
+
+        /* Color Scheme */
+        :root {
+            --primary-color: #FF6EC7; /* Bright pink */
+            --secondary-color: #37FF8B; /* Neon green */
+            --highlight-color: #00F2FF; /* Cyan */
+            --background-color: #121212; /* Dark background */
+            --text-color: #E1E1E1; /* Light gray text */
         }
 
-        h1 {
+        /* Body and Fonts */
+        body {
+            font-family: 'Press Start 2P', Arial, sans-serif; /* Retro gaming font */
+            line-height: 1.6;
+            color: var(--text-color);
+            background-color: var(--background-color);
+        }
+
+        /* Header and Navigation */
+        header {
+            background: linear-gradient(135deg, #1a1a1a, #444);
+            padding: 1rem;
             text-align: center;
-            color: #ffcc00;
+            box-shadow: 0px 8px 16px rgba(0, 255, 255, 0.5); /* Enhanced neon shadow */
         }
 
-        h2 {
-            color: #ffcc00;
+        header img {
+            width: 100px; /* Set logo size */
+            margin-bottom: 10px;
         }
 
-        p {
-            line-height: 1.5;
+        h1, h2 {
+            color: var(--highlight-color);
+            text-shadow: 2px 2px 10px rgba(255, 255, 0, 0.7);
         }
 
         .gameplay {
@@ -39,10 +59,20 @@
             padding: 15px;
             border-radius: 5px;
         }
+
+        footer {
+            background: #111;
+            color: #aaa;
+            text-align: center;
+            padding: 20px;
+        }
+
+        /* Additional styles can be integrated here */
     </style>
 </head>
 <body>
     <header>
+        <img src="upcoming_game_icon_1.png" alt="Escape in Space Logo"> <!-- Replace with actual logo path -->
         <h1>Escape in Space</h1>
         <p>An Endless Runner Game</p>
     </header>
@@ -67,3 +97,4 @@
     </footer>
 </body>
 </html>
+
