--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navbar -->
     <header>
         <div class="logo-container">
-            <img src="path/to/your/logo.png" alt="PIXELIT Logo" class="logo"> <!-- Replace with your logo path -->
+            <img src="logo.png" alt="PIXELIT Logo" class="logo"> <!-- Replace with your logo path -->
         </div>
         <nav>
             <a href="index.html">Home</a>
@@ -27,10 +27,10 @@
             <a href="#cta" class="btn">Join</a>
             <a href="login.html" class="btn">Login</a>
         </nav>
-        <div class="search-bar">
+<!--         <div class="search-bar">
             <input type="text" placeholder="Search..." aria-label="Search">
             <button type="submit">Search</button>
-        </div>
+        </div> -->
     </header>
 
     <!-- Hero Header Section -->
